bk_ida/gobmkida/c1/find_worm_threats
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_worm_threats/src/engine/worm.c:1358:23: error: use of undeclared identifier 'find_worm_threats_libs'; did you mean 'find_worm_threats'?
v2 = findlib( i, 241, find_worm_threats_libs); 
                      ^~~~~~~~~~~~~~~~~~~~~~
                      find_worm_threats
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_worm_threats/src/engine/worm.c:1331:7: note: 'find_worm_threats' declared here
void  find_worm_threats( ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_worm_threats/src/engine/worm.c:1364:6: error: use of undeclared identifier 'find_worm_threats_libs'
v5 = find_worm_threats_libs[j]; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_worm_threats/src/engine/worm.c:1378:6: error: use of undeclared identifier 'find_worm_threats_libs'
v8 = find_worm_threats_libs[j]; 
     ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_worm_threats/src/obj/1/worm.o] Error 1
